--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                                     <th>BP</th>
                                     <th>PV</th>
                                     <th>Init.</th>
-                                    <th>Défense</th>
+                                    <th>Réaction</th>
                                     <th>Résistance</th>
                                 </tr>
                             </thead>
@@ -546,3 +546,4 @@
 </html>
 
 ```
+
