--- a/index.html
+++ b/index.html
@@ -268,11 +268,11 @@
                     <div class="grid grid-cols-2 gap-2 mb-2">
                     <div>
                         <label class="text-[12px] text-gray-400 block">Armure (PA)</label>
-                        <input type="text" id="inv_pa" class="w-full p-1 text-yellow-400 font-bold text-sm">
+                        <input type="number" id="inv_pa" class="w-full p-1 text-yellow-400 font-bold text-sm" inputmode="numeric" step="1" min="0">
                     </div>
                     <div>
                         <label class="text-[12px] text-gray-400 block">Bouclier Psy (BP)</label>
-                        <input type="text" id="inv_bp" class="w-full p-1 text-purple-400 font-bold text-sm">
+                        <input type="number" id="inv_bp" class="w-full p-1 text-purple-400 font-bold text-sm" inputmode="numeric" step="1" min="0">
                     </div>
                 </div>
 
