--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             <section class="section-box p-3 clip-corner-inv h-auto">
                 <h2 class="text-lg text-[#00f0ff] mb-2 border-b border-[#004e53]">Inventaire</h2>
                 
-                    <div class="grid grid-cols-2 gap-2 mb-2">
+                    <div class="grid grid-cols-3 gap-2 mb-2">
                     <div>
                         <label class="text-[12px] text-gray-400 block">Armure (PA)</label>
                         <input type="number" id="inv_pa" class="w-full p-1 text-yellow-400 font-bold text-sm" inputmode="numeric" step="1" min="0">
@@ -273,6 +273,10 @@
                     <div>
                         <label class="text-[12px] text-gray-400 block">Bouclier Psy (BP)</label>
                         <input type="number" id="inv_bp" class="w-full p-1 text-purple-400 font-bold text-sm" inputmode="numeric" step="1" min="0">
+                    </div>
+                    <div>
+                        <label class="text-[12px] text-gray-400 block">Bouclier</label>
+                        <input type="number" id="inv_shield" class="w-full p-1 text-blue-400 font-bold text-sm" inputmode="numeric" step="1" min="0">
                     </div>
                 </div>
 
