Implement auto-expanding textareas and adjust styles for better usability

--- a/index.html
+++ b/index.html
@@ -253,16 +253,16 @@
             </div>
         </div>
 
-        <div class="mt-4 grid grid-cols-1 md:grid-cols-2 gap-4">
+        <div class="mt-4 space-y-4">
             
-            <section class="section-box p-3 clip-corner relative h-auto">
+            <section class="section-box p-3 clip-corner relative">
                 <h2 class="text-lg text-[#00f0ff] mb-2 border-b border-[#004e53] flex justify-between">
                     <span>Talents & Capacités</span>
                 </h2>
-                <textarea id="talents" class="w-full h-48 bg-transparent border border-[#004e53] p-2 text-xs leading-relaxed text-[#c4f0ff] focus:bg-[#00141a]" placeholder="Listez vos talents ici..."></textarea>
+                <textarea id="talents" class="w-full h-screen bg-transparent border border-[#004e53] p-2 text-sm leading-relaxed text-[#c4f0ff] focus:bg-[#00141a]" placeholder="Listez vos talents ici..."></textarea>
             </section>
 
-            <section class="section-box p-3 clip-corner-inv h-auto">
+            <section class="section-box p-3 clip-corner-inv">
                 <h2 class="text-lg text-[#00f0ff] mb-2 border-b border-[#004e53]">Inventaire</h2>
                 
                     <div class="grid grid-cols-3 gap-2 mb-2">
