--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                                 <option value="80">Lourde</option>
                             </select>
                         </div>
-                        <div id="armor_exotic_container" class="flex items-center gap-2">
+                        <div id="armor_exotic_container" class="flex items-center gap-2 self-center justify-center">
                             <input type="checkbox" id="armor_exotic" class="accent-[#00f0ff]">
                             <label for="armor_exotic" class="text-[12px] text-gray-400">Est en composant exotique ?</label>
                         </div>
